--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,63 +1,126 @@
-body{
-    padding: 0px;
-    margin: 0px;
-    /* font-family: "Playfair Display", Helvetica, Arial, sans-serif;; */
+body {
+  padding: 0px;
+  margin: 0px;
+  background-image: url("/Pics/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
-header{
-    padding: 5px;
-    background-color: #5b544b;
-    color: white;
+header {
+  padding: 15px;
+  background-color: #665f55;
+  color: #f3eee5;
+  font-size: 17px;
 }
-.right{
-    float: right;
+.left {
+  /* float: left; */
+  display: inline;
 }
-.list{
-    display: inline;
-    list-style: none;
+.right {
+  float: right;
+  display: inline;
 }
-.l{
-    list-style: none;
-    text-align: center;
+.right i,
+.left i {
+  align-items: center;
+  width: 15px;
+  height: 15px;
+  padding: 0px 5px;
+  /* margin-top: 0px; */
+  color: #bbbbbb;
 }
-.box{
-    display: inline-block;
-    padding: 20px 30px;
-    border: 1px solid greenyellow;
+.list {
+  display: inline;
+  list-style: none;
+  padding: 2px;
 }
-.top-bar, .logo, .pic, .text{
-    display: flex;
-    justify-content: center;
+.l {
+  list-style: none;
+  text-align: center;
+  letter-spacing: 2px;
 }
-.logo{
-    padding: 30px;    
-    border: 1px solid rgba(0, 0, 0, .08);
+.first {
+  font-size: 23px;
 }
-.logo-img{
-    height: 60px;
-    width: 110px;
+.second {
+  font-size: 15px;
+  line-height: 34px;
+  color: #bec28d;
+}
+.box {
+  display: inline-block;
+  padding: 15px 35px;
+  border-right: 1px solid rgba(0, 0, 0, 0.08);
+  color: #725e47;
+}
+.top-bar {
+  border-top: 1px solid rgba(0, 0, 0, 0.08);
+  background-color: rgb(247, 244, 237);
+}
+#home, .box:hover {
+    border-top: 4px solid     #383129;
+    padding: 11px 35px;
+    color: #383129;
+    cursor: pointer;
+}
+.top-bar,
+.logo,
+.arrow-logo,
+.pic,
+.text {
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+}
+.logo {
+  background-color: rgb(247, 244, 237);
+  width: 100%;
+}
+.logo,
+.arrow-logo {
+  padding: 40px 0px;
+}
+.logo-img {
+  height: 60px;
+  width: 110px;
 }
 .content {
-    margin-top: 70px;
-    display: flex;
-    justify-content: center;
+  position: relative;
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
 }
-.content h1, .text h1{
-    width: 75%;
-    font-size: 50px;
-    line-height: 40px;
-    color: #725e47;
-    text-align: center;
+.content h1,
+.text h1 {
+  width: 80%;
+  font-size: 50px;
+  line-height: 40px;
+  color: #725e47;
+  text-align: center;
 }
-.container{
-    padding: 30px;
+.firstLine {
+  color: #808d2b;
+  font-weight: 580;
+  margin: 0px;
 }
-.text h1{
-    color: #808d2b;
+.secondLine {
+  margin: 5px;
+  font-weight: 400;
 }
-.text p{
-    width: 80%;
-    font-size: 16px;
-    line-height: 28px;
-    color: #555a60;
-    text-align: center;
+.container {
+  padding: 30px;
+}
+.text h1 {
+  color: #808d2b;
+}
+.text p {
+  width: 75%;
+  font-size: 18px;
+  line-height: 28px;
+  color: #555a60;
+  text-align: center;
+}
+.footer-pic {
+  width: 100%;
 }
