--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,34 +1,44 @@
 body {
   padding: 0px;
   margin: 0px;
-  background-image: url("./Pics/bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   overflow-x: hidden;
 }
+.bg{
+  z-index: -2;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    object-fit: cover;
+}
 header {
-  padding: 15px;
+  /* padding: 5px; */
   background-color: #665f55;
   color: #f3eee5;
-  font-size: 17px;
+  font-size: 16px;
+  display: flex;
+  width: 100vw;
+  justify-content: space-between;
 }
 .left {
-  /* float: left; */
   display: inline;
 }
 .right {
-  float: right;
   display: inline;
+  margin-right: 3%;
 }
+
 .right i,
 .left i {
   align-items: center;
   width: 15px;
   height: 15px;
   padding: 0px 5px;
-  /* margin-top: 0px; */
   color: #bbbbbb;
+}
+.right i:hover {
+  color: white;
+  cursor: pointer;
 }
 .list {
   display: inline;
@@ -58,11 +68,51 @@ header {
   border-top: 1px solid rgba(0, 0, 0, 0.08);
   background-color: rgb(247, 244, 237);
 }
-#home, .box:hover {
-    border-top: 4px solid     #383129;
-    padding: 11px 35px;
-    color: #383129;
-    cursor: pointer;
+#home,
+.box:hover {
+  border-top: 4px solid #383129;
+  padding: 11px 35px;
+  color: #383129;
+  cursor: pointer;
+}
+.pic {
+  align-items: center;  
+}
+.image{
+    width: 90%;
+}
+.stickyheader {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  width: 100vw;
+}
+.pic-box {
+  position: absolute;
+  display: flex;
+  color: white;
+  opacity: 0;
+  transition: all 0.4s ease;
+}
+.pic:hover .pic-box {
+  opacity: 1;
+  transform: scale(1.1);
+}
+.image:hover {
+  /* transform: scale(1.1);  */
+  cursor: pointer;
+}
+.search {
+  padding: 20px 16px;
+  background-color: #808d2b;
+}
+.search:hover {
+  background-color: #808d2b;
+  cursor: pointer;
+  color: white;
+}
+.sfirst {
+  border-right: 1px solid white;
 }
 .top-bar,
 .logo,
@@ -77,9 +127,11 @@ header {
   background-color: rgb(247, 244, 237);
   width: 100%;
 }
-.logo,
+.logo {
+  padding: 50px 0px;
+}
 .arrow-logo {
-  padding: 40px 0px;
+  padding: 0px 0px 35px 0px;
 }
 .logo-img {
   height: 60px;
@@ -121,6 +173,134 @@ header {
   color: #555a60;
   text-align: center;
 }
-.footer-pic {
+.bottom-bar {
+  position: relative;
   width: 100%;
+  margin: 0px;
+}
+.end-pic {
+  width: 100%;
+  height: 60vh;
+  position: relative;
+  z-index: -1;
+}
+.end-car {
+  position: relative;
+  width: 100%;
+}
+.end-content {
+  position: absolute;
+  top: 30%;
+  z-index: 2;
+  font-size: 17px;
+  color: #7d7974;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.section {
+  width: 20%;
+}
+.latest {
+  width: 24%;
+}
+.about-sec {
+  width: 21%;
+}
+.section h2 {
+  color: #808d2b;
+}
+.date-sec {
+  display: flex;
+}
+.circle {
+  height: 7px;
+  width: 7px;
+  border-radius: 20px;
+  border: 4px solid #808d2b;
+  /* padding: 5px; */
+}
+.date-circle {
+  margin-left: 15%;
+  list-style: none;
+}
+.comment a,
+.comment a i {
+  text-decoration: none;
+  color: #7d7974;
+}
+.comment a:hover,
+.links li a:hover,
+.tags a:hover {
+  color: #706c67;
+  text-decoration: underline;
+}
+
+.date {
+  font-size: 14px;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.07);
+}
+.links {
+  list-style: square;
+  color: #808d2b;
+}
+
+.links li {
+  padding: 5px 0px;
+}
+.links li a {
+  color: #7d7974;
+  text-decoration: none;
+}
+.about {
+  font-size: 18px;
+  color: #41474b;
+}
+.tag-sec {
+  margin-bottom: 100px;
+}
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: last baseline;
+}
+.tags a {
+  padding: 2px;
+  color: #7d7974;
+  text-decoration: none;
+  line-height: 17px;
+}
+.tags-link {
+  font-size: 8pt;
+}
+.bigtags {
+  font-size: 22pt;
+}
+
+footer {
+  background-color: #665f55;
+  color: #7d7974;
+  font-size: 17px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0px;
+  padding: 20px;
+  width: 100%;
+  clear: both;
+}
+.footer-top,
+.footer-bottom {
+  display: flex;
+  margin: 7px;
+  justify-content: center;
+}
+.footer-bottom i {
+  padding: 0px 8px;
+  color: #6f6f7b;
+}
+.footer-top li {
+  list-style: none;
 }
