--- a/h.css
+++ b/h.css
@@ -13,7 +13,8 @@ body {
   object-fit: cover;
 }
 header {
-  background-color: #5b544b;
+  /* padding: 5px; */
+  background-color: #665f55;
   color: #f3eee5;
   font-size: 16px;
   display: flex;
@@ -21,19 +22,19 @@ header {
   justify-content: space-between;
 }
 .left {
-  display: flex;
+  display: inline;
 }
 .right {
-  display: flex;
+  display: inline;
   margin-right: 3%;
 }
 
 .right i,
 .left i {
   align-items: center;
-  width: 12px;
-  height: 12px;
-  padding: 0px 9px;
+  width: 15px;
+  height: 15px;
+  padding: 0px 5px;
   color: #bbbbbb;
 }
 .right i:hover {
@@ -41,36 +42,17 @@ header {
   cursor: pointer;
 }
 .list {
-  display: flex;
+  display: inline;
   list-style: none;
   padding: 2px;
-}
-.stickyheader {
-  position: sticky;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-}
-.logo {
-  background-color: rgb(247, 244, 237);
-  width: 100%;
-  padding: 50px 0px;
-}
-.bars {
-  display: none;
-}
-.logo-img {
-  height: 60px;
-  width: 110px;
 }
 .top-bar {
   border-top: 1px solid rgba(0, 0, 0, 0.08);
   background-color: rgb(247, 244, 237);
 }
 .box {
-  display: flex;
-  flex-direction: column;
-  padding: 1% 3%;
+  display: inline-block;
+  padding: 15px 35px;
   border-right: 1px solid rgba(0, 0, 0, 0.08);
   color: #725e47;
 }
@@ -90,14 +72,13 @@ header {
 #home,
 .box:hover {
   border-top: 4px solid #383129;
-  padding: 0.6% 3%;
+  padding: 11px 35px;
   color: #383129;
   cursor: pointer;
 }
 .pic {
   align-items: center;
   animation: pulse 5s 1s infinite;
-  max-width: 96%;
 }
 @keyframes pulse {
   0% {
@@ -108,9 +89,13 @@ header {
   }
 }
 .image {
-  border-left: 10px solid white;
-  border-bottom: 10px solid white;
   width: 90%;
+}
+.stickyheader {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  width: 100%;
 }
 .pic-box {
   position: absolute;
@@ -121,7 +106,7 @@ header {
 }
 .pic:hover .pic-box {
   opacity: 1;
-  /* transform: scale(1.1); */
+  transform: scale(1.1);
 }
 .image:hover {
   /* transform: scale(1.1);  */
@@ -148,8 +133,19 @@ header {
   display: flex;
   justify-content: center;
 }
+.logo {
+  background-color: rgb(247, 244, 237);
+  width: 100%;
+}
+.logo {
+  padding: 50px 0px;
+}
 .arrow-logo {
   padding: 0px 0px 35px 0px;
+}
+.logo-img {
+  height: 60px;
+  width: 110px;
 }
 .content {
   position: relative;
@@ -175,7 +171,7 @@ header {
   font-weight: 400;
 }
 .container {
-  padding: 30px 0px;
+  padding: 30px;
 }
 .likes {
   display: flex;
@@ -193,7 +189,6 @@ header {
 }
 .text h1 {
   color: #808d2b;
-  /* letter-spacing: 1px; */
 }
 .text p {
   width: 75%;
@@ -209,25 +204,34 @@ header {
 }
 .end-pic {
   width: 100%;
-  height: 60vh;
+  height: 70vh;
+  position: absolute;
+  top: 19%;
   z-index: -1;
 }
 .end-car {
+  position: absolute;
+  z-index: 1;
   width: 100%;
 }
 .end-content {
-  position: absolute;
-  top: 30%;
-  font-size: 17px;
+  position: relative;
+  z-index: 2;
+  padding-top: 10%;
+  font-size: 16px;
   color: #7d7974;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  flex-wrap: wrap;
 }
 .section {
+  width: 20%;
+}
+.latest {
+  width: 24%;
+}
+.about-sec {
   width: 21%;
-  height: 300px;
 }
 .section h3 {
   color: #808d2b;
@@ -261,13 +265,13 @@ header {
 .date {
   font-size: 14px;
   padding: 5px;
-  margin-left: 5%;
+  margin-left: 7%;
   line-height: 10px;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.07);
 }
 .comment {
-  margin-left: 16%;
+  margin-left: 15%;
 }
 .links {
   list-style: square;
@@ -277,8 +281,7 @@ header {
 .links li {
   padding: 5px 0px;
 }
-.links li a,
-.footerlink {
+.links li a , .footer-top li a{
   color: #7d7974;
   text-decoration: none;
 }
@@ -286,9 +289,9 @@ header {
   font-size: 18px;
   color: #41474b;
 }
-/* .tag-sec {
+.tag-sec {
   margin-bottom: 100px;
-} */
+}
 .tags {
   display: flex;
   flex-wrap: wrap;
@@ -308,7 +311,6 @@ header {
 }
 
 footer {
-  width: 100%;
   background-color: #665f55;
   color: #7d7974;
   font-size: 16px;
@@ -316,24 +318,24 @@ footer {
   justify-content: center;
   flex-direction: column;
   margin: 0px;
-  padding: 20px 0px;
+  padding: 20px;
+  width: 100%;
+  position: static;
+  bottom: 0;
   clear: both;
 }
 .footer-top,
 .footer-bottom {
   display: flex;
-  margin: 7px 0px;
-  text-align: center;
+  margin: 7px;
   justify-content: center;
 }
 .footer-bottom i {
   padding: 0px 8px;
   color: #6f6f7b;
 }
-.footer-top li {
-  list-style: none;
-}
-
-.footerlink:hover {
-  text-decoration: underline;
+.footer-top li,
+.footerlink{
+  color: #6f6f7b;
+  text-decoration: none;
 }
