--- a/responsive.css
+++ b/responsive.css
@@ -19,19 +19,43 @@ header {
 .top-bar {
   display: none;
 }
+.shownavbar {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 40%;
+  position: absolute;
+  z-index: 2;
+  padding: 1%;
+  border-top: none;
+  margin-left: 7%;
+}
+.shownavbar .box {
+  flex-direction: row;
+  padding: 2% 4%;
+}
+.shownavbar .first {
+  font-size: 20px;
+  padding: 2%;
+}
+.shownavbar #home,
+.box:hover {
+  border-top: none;
+  padding: 2% 4%;
+}
+.shownavbar .content {
+  position: relative;
+  z-index: 1;
+}
 .firstLine {
   font-size: 40px;
 }
 .secondLine {
   font-size: 40px;
 }
-
-/* .container {
-  padding: 30px 60px;
-} */
 .text h1 {
   font-size: 40px;
-  width:75%;
+  width: 75%;
 }
 .text p {
   font-size: 14px;
@@ -61,7 +85,7 @@ header {
 @media (max-width: 770px) {
   header {
     background-color: white;
-    font-size: 10px;
+    font-size: 13px;
     flex-direction: column;
     justify-content: center;
     color: #bbbbbb;
@@ -75,6 +99,7 @@ header {
   }
   .right i {
     justify-content: center;
+    padding: 0px 11px;
   }
   .right i,
   .left i {
@@ -82,6 +107,43 @@ header {
     height: 11px;
     padding: 0px 5px;
     color: #bbbbbb;
+  }
+  .logo-section {
+    display: flex;
+    position: relative;
+  }
+  .logo {
+    padding: 20px 0px;
+  }
+  .logo-img {
+    height: 130px;
+    width: 230px;
+  }
+  .bars {
+    margin: 4% 2%;
+  }
+  .shownavbar {
+    margin-top: 0px;
+    width: 100%;
+    position: static;
+    margin-left: 4%;
+  }
+  .shownavbar .box {
+    flex-direction: row;
+    padding: 5px;
+  }
+  .shownavbar .first {
+    font-size: 20px;
+    padding: 5px;
+  }
+  .shownavbar #home,
+  .box:hover {
+    border-top: none;
+    padding: 5px;
+  }
+  .shownavbar .content {
+    position: static;
+    z-index: 1;
   }
   .end-pic {
     height: 120vh;
@@ -114,7 +176,8 @@ header {
     line-height: 20px;
   }
 
-  .secLinks, .about-sec {
+  .secLinks,
+  .about-sec {
     height: 130px;
   }
 
@@ -124,19 +187,19 @@ header {
   .comment {
     margin-left: 6%;
   }
-  
-footer {
-  font-size: 14px;
-}
+
+  footer {
+    font-size: 14px;
+  }
 }
 @media (max-width: 400px) {
-.firstLine {
-  font-size: 30px;
-}
-.secondLine {
-  font-size: 30px;
-}
- .end-pic {
+  .firstLine {
+    font-size: 30px;
+  }
+  .secondLine {
+    font-size: 30px;
+  }
+  .end-pic {
     height: 100vh;
   }
   .text h1 {
