--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,12 +46,13 @@ header {
   padding: 2px;
 }
 .stickyheader {
-  top: 0;
+  /* position: sticky; */
+  /* top: 0; */
+   background-color: rgb(247, 244, 237);
   z-index: 1;
   width: 100%;
 }
 .logo {
-  background-color: rgb(247, 244, 237);
   width: 100%;
   padding: 50px 0px;
 }
@@ -64,7 +65,6 @@ header {
 }
 .top-bar {
   border-top: 1px solid rgba(0, 0, 0, 0.08);
-  background-color: rgb(247, 244, 237);
 }
 .box {
   display: flex;
